--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -377,8 +377,8 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="UVa\10000\10074.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="UVa\10000\10077.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -1922,7 +1922,6 @@
     <ClInclude Include="Library\old\combinatorics.h" />
     <ClInclude Include="Library\old\components.h" />
     <ClInclude Include="Library\old\double.h" />
-    <ClInclude Include="Library\old\dp_algs.h" />
     <ClInclude Include="Library\old\eularian.h" />
     <ClInclude Include="Library\old\graham.h" />
     <ClInclude Include="Library\old\graph.h" />
