--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1667,6 +1667,9 @@
     <ClCompile Include="UVa\100\113.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\800\836.cpp">
+      <Filter>UVa\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
