--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -1748,6 +1748,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\500\558.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\500\562.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1928,7 +1932,6 @@
     <ClInclude Include="Library\old\double.h" />
     <ClInclude Include="Library\old\eularian.h" />
     <ClInclude Include="Library\old\graham.h" />
-    <ClInclude Include="Library\old\graph.h" />
     <ClInclude Include="Library\old\graph_util.h" />
     <ClInclude Include="Library\old\matching.h" />
     <ClInclude Include="Library\old\misc.h" />
