--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1673,6 +1673,9 @@
     <ClCompile Include="UVa\500\558.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\700\793.cpp">
+      <Filter>UVa\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
