--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1679,6 +1679,9 @@
     <ClCompile Include="UVa\11900\11991.cpp">
       <Filter>UVa\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\190.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
