--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1682,6 +1682,9 @@
     <ClCompile Include="UVa\100\190.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12100\12160.cpp">
+      <Filter>UVa\12100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
