--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1685,6 +1685,9 @@
     <ClCompile Include="UVa\12100\12160.cpp">
       <Filter>UVa\12100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\524.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
