--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1688,6 +1688,9 @@
     <ClCompile Include="UVa\500\524.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10286.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
