--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1691,6 +1691,9 @@
     <ClCompile Include="UVa\10200\10286.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10700\10714.cpp">
+      <Filter>UVa\10700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
