ac, changed order of tally() in utils.

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1697,6 +1697,12 @@
     <ClCompile Include="UVa\11700\11729.cpp">
       <Filter>UVa\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11094.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\10200\10299.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
