--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1703,6 +1703,9 @@
     <ClCompile Include="UVa\10200\10299.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\107.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
