--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -1612,6 +1612,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\300\378.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\300\382.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1958,6 +1962,7 @@
     <ClInclude Include="Library\bits\stdc++.h" />
     <ClInclude Include="Library\circle.h" />
     <ClInclude Include="Library\combinatorics.h" />
+    <ClInclude Include="Library\double.h" />
     <ClInclude Include="Library\sorting.h" />
     <ClInclude Include="Library\dp_algs.h" />
     <ClInclude Include="Library\floodfill.h" />
@@ -1973,7 +1978,6 @@
     <ClInclude Include="Library\old\circle.h" />
     <ClInclude Include="Library\old\combinatorics.h" />
     <ClInclude Include="Library\old\components.h" />
-    <ClInclude Include="Library\old\double.h" />
     <ClInclude Include="Library\old\eularian.h" />
     <ClInclude Include="Library\old\graham.h" />
     <ClInclude Include="Library\old\graph_util.h" />
