--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1715,6 +1715,12 @@
     <ClCompile Include="UVa\10100\10116.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\106.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\10100\10101.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
