--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1721,6 +1721,9 @@
     <ClCompile Include="UVa\10100\10101.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10679.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
