--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1724,6 +1724,9 @@
     <ClCompile Include="UVa\10600\10679.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10102.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
