--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1730,6 +1730,9 @@
     <ClCompile Include="UVa\10300\10397.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10496.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
