--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1736,6 +1736,9 @@
     <ClCompile Include="UVa\10400\10491.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\1200\1203.cpp">
+      <Filter>UVa\1200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
