ac, fixed flooddist() by externing inf.

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1739,6 +1739,9 @@
     <ClCompile Include="UVa\1200\1203.cpp">
       <Filter>UVa\1200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11200\11244.cpp">
+      <Filter>UVa\11200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
