--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1751,6 +1751,9 @@
     <ClCompile Include="UVa\11500\11577.cpp">
       <Filter>UVa\11500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11600\11679.cpp">
+      <Filter>UVa\11600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
