--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1754,6 +1754,9 @@
     <ClCompile Include="UVa\11600\11679.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10633.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
