--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1757,6 +1757,9 @@
     <ClCompile Include="UVa\10600\10633.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10534.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
