--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1793,6 +1793,9 @@
     <ClCompile Include="UVa\100\151.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\130.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
