--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1796,6 +1796,9 @@
     <ClCompile Include="UVa\100\130.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11500\11572.cpp">
+      <Filter>UVa\11500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
