--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1802,6 +1802,9 @@
     <ClCompile Include="UVa\10600\10678.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10673.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
