--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1808,6 +1808,9 @@
     <ClCompile Include="UVa\10200\10242.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10700\10790.cpp">
+      <Filter>UVa\10700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
