--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1814,6 +1814,9 @@
     <ClCompile Include="UVa\10700\10721.cpp">
       <Filter>UVa\10700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10700\10791.cpp">
+      <Filter>UVa\10700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
