--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1820,6 +1820,9 @@
     <ClCompile Include="UVa\400\457.cpp">
       <Filter>UVa\400\450</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10033.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
