--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1823,6 +1823,9 @@
     <ClCompile Include="UVa\10000\10033.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\291.cpp">
+      <Filter>UVa\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
