--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1838,6 +1838,9 @@
     <ClCompile Include="UVa\11300\11362.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11034.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
