--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1841,6 +1841,9 @@
     <ClCompile Include="UVa\11000\11034.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10539.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
