--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1853,6 +1853,9 @@
     <ClCompile Include="UVa\10300\10323.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\497.cpp">
+      <Filter>UVa\400\490</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
