--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1856,6 +1856,9 @@
     <ClCompile Include="UVa\400\497.cpp">
       <Filter>UVa\400\490</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\800\846.cpp">
+      <Filter>UVa\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
